tests/NormalTests/paczka2/big_fuzzy/34501974.err
Error in line 5: A74 A197 44,9
Error in line 6: A74 S56 15,2
Error in line 7: lj17oms A74 98,1
Error in line 19: A74 A741 4,9
Error in line 20: A74 A197 66,5
Error in line 16: lj17oms A197 44,4
Error in line 14: 0gpvYQXOwSU A74 28,8
Error in line 24: lj17oms S56 10,5
Error in line 51: 8yFbH0o0bC7 A74 66,0
Error in line 54: A74 A74 12,4
Error in line 53: lj17oms S56 10,5
Error in line 60: cOM A197 13,5
Error in line 64: cOM A74 16',0
Error in line 80: 0gpvYQXOwSU A741 56,62
Error in line 66: gKfgvDbgc A74 87,9
Error in line 90: 8yFbH0o0bC7 A741 50,8
Error in line 98: EpRuEBa A74 48,7
Error in line 100: EpRuEBa A741 63,8
Error in line 105: cOM A741 36,5
Error in line 84: 0gpvYQXOwSU A741 127,0
Error in line 104: lj17oms A197 54,8
Error in line 106: cOM A197 46,0
Error in line 131: 0gpvYQXOwSU A197 68,3
Error in line 125: A74 A197 54,3
Error in line 149: EpRuEBa A74 76,0
Error in line 150: cOM A74 36,3
Error in line 155: EpRuEBa A741 88,2
Error in line 162: gKfgvDbgc A197 7,5
Error in line 166: EpRuEBa A741 52,5
Error in line 163: gKfgvDbgc A741 13,6
Error in line 170: gKfgvDbgc A197 4,5
Error in line 172: lj17oms A74 19,0
Error in line 181: EpRuEBa A741 74,8
Error in line 191: 0gpvYQXOwSU A74 6,7
Error in line 189: 0gpvYQXOwSU S56 419,9
Error in line 197: 8yFbH0o0bC7 A741 87,5
Error in line 204: EpRuEBa A74 46,^
Error in line 203: gKfgvDbgc A741 73,5
Error in line 196: lj17oms A741 94,1
Error in line 195: 0gpvYQXOwSU A741 51,2
Error in line 214: 0gpvYQXOwSU A74 56,3
Error in line 217: lj17oms A197 322,24
Error in line 202: EpRuEBa S56 18,1
Error in line 185: A74 A74 23,5
Error in line 218: EpRuEBa A74 4,1
Error in line 212: 8yFbH0o0bC7 S56 161,0
Error in line 219: A74 A741 42,7
Error in line 231: A74 A197 36,1
Error in line 235: 8yFbH0o0bC7 A741 -1,2
Error in line 227: 0gpvYQXOwSU A741 56,7
Error in line 223: 8yFbH0o0bC7 A741 37,9
Error in line 249: 8yFbH0o0bC7 A197 39,5
